# fast-backend

./: .gitignore  README.md  database.py  main.py  pyproject.toml
app/: __init__.py  database.py  dependencies.py  errors.py  main.py
app/api/: __init__.py  user.py  user_session.py
app/crud/: __init__.py  user.py  user_session.py
app/models/: __init__.py  user.py  user_session.py
app/schemas/: __init__.py  user.py  user_session.py
app/services/: user.py  user_session.py
auth/: dependencies.py  endpoints.py  security.py
backend/: config.py  database.py  dependencies.py  main.py
backend/api/: user.py  user_session.py
backend/crud/: user.py  user_session.py
backend/models/: user.py  user_session.py
backend/services/: __init__.py  user.py  user_session.py
user/: auth.py  crud.py  dependencies.py  endpoints.py  models.py  schemas.py
